<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_quiz"
    android:orientation="vertical"
    tools:context=".MainActivity2">
    <TextView
        android:id="@+id/chooseTopic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_vertical|center_horizontal"
        android:fontFamily="@font/playball"
        android:text="@string/choose_materik"
        android:textColor="@color/white"
        android:textSize="55sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/chooseTopic"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:weightSum="2"
        >
        <LinearLayout
            android:id="@+id/amerika"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            android:background="@drawable/round_back_white10"
            tools:ignore="Suspicious0dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:src="@drawable/q_q"/>
            <TextView
                android:id="@+id/amerika_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/amerika"
                android:textSize="20sp"
                android:textColor="#3D1560"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/afrika"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            android:background="@drawable/round_back_white10"
            tools:ignore="Suspicious0dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:src="@drawable/img_4"/>
            <TextView
                android:id="@+id/afrika_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/afrika"
                android:textSize="20sp"
                android:textColor="#3D1560"
                android:textStyle="bold"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayout1"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:weightSum="2"
        >
        <LinearLayout
            android:id="@+id/asia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            android:background="@drawable/round_back_white10"
            tools:ignore="Suspicious0dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:src="@drawable/img_5"/>
            <TextView
                android:id="@+id/asia_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/asia"
                android:textSize="20sp"
                android:textColor="#3D1560"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/europe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:layout_marginStart="5dp"
            android:orientation="vertical"
            android:background="@drawable/round_back_white10"
            tools:ignore="Suspicious0dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:src="@drawable/img_7"/>
            <TextView
                android:id="@+id/europe_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/europe"
                android:textSize="20sp"
                android:textColor="#3D1560"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>