<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    android:background="@drawable/bg_quiz"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fill_in_th_rows"
        android:textSize="50sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:fontFamily="@font/playball"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/first_name"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="@color/white"
        app:endIconMode="clear_text"
        app:endIconDrawable="@drawable/ic_baseline_clear_24"
        android:textColorHint="@color/white"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/white"
            android:id="@+id/birinshi_san"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_marginTop="80dp"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/qosiw"
                android:layout_width="200dp"
                android:backgroundTint="#36A897"
                android:layout_height="70dp"
                android:text="@string/start_quiz"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="30sp"
                android:enabled="false"
                app:cornerRadius="20dp"
                />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/max_score_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/previousName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:gravity="center"
        android:layout_gravity="center"/>


</LinearLayout>